(Stuart Lewis)
 - [2057231] Refactor LDAPServlet to use Stackable Authentication
 - Enable ldap.login.specialgroup special group for all LDAP users
 - Fix for SF bug [2164955] DSpace1.5.1(XML) problem with Login to restricted bitstreams
 - Fix for SF bug [2343281] XHTML Head Dissimination Crosswalk exposes provenance info
 - Fix for SF bug [1896225] HTML tags not stripped in statistics display
 - Fix for SF bug [1951859] DSpace Home link style in breadcrumb trail
 - Fix for SF bug [1730606] Restricted Items metadata exposed via OAI
 - Patch for SF feature request [1587270] Implicit group for all registered users
 - Fix for SF bug [2495728] 'My Account' disappears following exports
 - Update XMLUI Google Analytics code to match latest tracking code
 - Fix for SF bug [1606439] Exception handling for deleting a metadata field
 - [2513300] Fix for bug [1774958] Nested folders do not export correctly
 - Fix for SF bug [2086481] xmlui Administrative log in as another eperson

(Stuart Lewis / Chris Yates / Flavio Botelho / Alex Barbieri / Reuben Pasquini)
 - [2057378] Hierarchical LDAP support

(Yin Latt)
 - SF bug [1931796] DSpace 1.5 Controlled Vocab (edit-metadata.jsp) not working on first box in twobox
 - SF bug [2137425] DSpace 1.5.1(XMLUI) Wrong dir usage of StatisticsLoader

(Claudia Juergen)
 - [2041754] Feature Request #1896717 Registration notification missing information about instance
 - Fix for SF Bug #1775059 Repeated execution of chooser.jsp exhausts db conn pool
 - Fix for SF Bug #2352146 2 Authentications with LoginPage cause connection exhaust
 - Fixed hardcoded metadata language qualifier in DescribeStep to use default.language configuration parameter
 - Fix for SF Bug #2125833 News stored not language dependend (code change in dspace-api-lang googlecode)
 - Fix for SF Bug #2343849 DSQuery invalid check for empty query string
 - Fix for SF Bug #1725817 Error in authorization to submit when you add collection.